src/test/deca/syntax/valid/readInt.deca
// Description:
//    Test de readInt 
//
// Resultats:
//    Rien
//


{   
    int x = readInt();
}
