src/test/deca/syntax/invalid/infinite_int.deca
// Description:
//    programme contenant un entier infini
//   
//


{
    int i = 99214748369;
}
